# path-tracer

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
geometry/: axis.h  matrix.cpp  matrix.h  matrix.test.cpp  point.cpp  point.h  point.test.cpp  ray.cpp  ray.h  ray.test.cpp  vector.cpp  vector.h  vector.test.cpp
image/: image.cpp  image.h  image.test.cpp
image/io/: png.cpp  png.h
math/: quadratic_solver.cpp  quadratic_solver.h  quadratic_solver.test.cpp
scene/: camera.cpp  camera.h  camera.test.cpp  color.cpp  color.h  color.test.cpp  material.cpp  material.h  material.test.cpp  object.cpp  object.h  plane.cpp  plane.h  plane.test.cpp  sphere.cpp  sphere.h  sphere.test.cpp
utils/: timer.cpp  timer.h
